[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Camera.gd" type="Script" id=1]
[ext_resource path="res://Assets/player_idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/player_walking.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 48 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "jumping",
"speed": 0.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 2592.79, 1597.37 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "jumping"

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
smoothing_speed = 20.0
drag_margin_left = 0.0
drag_margin_right = 0.0
script = ExtResource( 1 )

[node name="RaycastCenter" type="RayCast2D" parent="."]
position = Vector2( 0, 48 )
enabled = true
cast_to = Vector2( 0, 1 )
collide_with_areas = true

[node name="RaycastLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 48 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RaycastRight" type="RayCast2D" parent="."]
position = Vector2( 24, 48 )
enabled = true
cast_to = Vector2( 0, 1 )
